solve background issue on safari

--- a/index.css
+++ b/index.css
@@ -14,25 +14,18 @@ body {
     color: var(--white);
     font-family: sans-serif;
     position: relative;
-    /*background-image: url(images/bg.png);
+    background-image: url(images/bg.png);
     background-repeat: no-repeat;
-    background-size: 100vw 100vh;
-    background: linear-gradient(to right, rgba(0,0,0,0.4),rgba(0,0,0,0.2)),linear-gradient(to right, rgba(86,195,237,0.7),rgba(232,159,175,0.7)), url(images/group.png);*/
-    overflow: auto;
-    padding-bottom: 4rem;
-}
-
-#bg-div {
-    width: 100%;
-    height: 100%;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center center;
     position: fixed;
     top: 0;
     left: 0;
-    z-index: -2;
-}
-#bg-img {
     width: 100%;
-    height: auto; 
+    height: 100%;
+    overflow: scroll;
+    padding-bottom: 4rem;
 }
 
 /* Header Section */
